--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ vendor/
 env/
 venv/
 ENV/
+data
 
 # C# and .NET
 *.csproj.user
@@ -78,3 +79,5 @@ Thumbs.db
 *.dbmdl
 *.jfm
 .ipynb_checkpoints/
+
+.fake
