--- a/src/NorskApi.Api/appsettings.json
+++ b/src/NorskApi.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=Norskapi;User Id=Sa;Password='Secret1!';Encrypt=false"
+  }
 }
